# final-project-c-schulz

./: .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: mqtt.workflow.yaml  qemu.workflow.yaml  rpi.workflow.yaml
base-external/: Config.in  external.desc  external.mk
base-external/package/: rpi-wifi
base_external/: external.desc
base_external/configs/: mqtt_rpi_defconfig
mqtt-event-logger/: Config.in  external.mk
mqtt-event-logger/configs/: mqtt_qemu_defconfig  mqtt_rpi_defconfig
mqtt-event-logger/package/mqtt-subscriber/: Config.in  mqtt-subscriber.mk
mqtt-event-logger/package/mqtt-subscriber/src/: CMakeLists.txt  Makefile  mqtt_subscriber.cpp  mqtt_subscriber_start-stop
tests/: runqemu.sh  validate.sh  validate_helpers.sh  validate_mqtt.sh  validate_qemu.sh  validate_rpi.sh
